--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 django==2.2.7
-gunicorn
+gunicorn==19.9.0
 djangorestframework==3.10.3
 certifi==2018.10.15
 chardet==3.0.4
 django-crispy-forms==1.7.2
 idna==2.7
-Pillow==5.2.0
+Pillow==6.2.1
 pytz==2018.5
 requests==2.19.1
 urllib3==1.23
